# documind

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.ui  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-cloud.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
data/uploads/: sample_company_handbook.md
scripts/: ollama-entrypoint.sh
src/documind/: __init__.py  cli.py  config.py
src/documind/api/: main.py  schemas.py
src/documind/core/: __init__.py  ingest.py  loader.py  rag.py  vectorstore.py
src/documind/ui/: app.py
src/documind/utils/: logging.py
tests/: test_api.py  test_loader.py  test_rag.py
