[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documind"
version = "1.0.0"
description = "Local, private Retrieval-Augmented Generation over your documents (Ollama + ChromaDB)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aniket Soni" }]
keywords = ["rag", "llm", "genai", "ollama", "langchain", "chromadb", "retrieval-augmented-generation"]

dependencies = [
    "langchain>=1.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0",
    "langchain-text-splitters>=1.0",
    "langchain-chroma>=1.0",
    "langchain-huggingface>=1.0",
    "langchain-ollama>=1.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pypdf>=4.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "streamlit>=1.36",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
documind = "documind.cli:main"

[project.urls]
Homepage = "https://github.com/Aniketsoni2002/documind"
Repository = "https://github.com/Aniketsoni2002/documind"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI intentionally uses function calls (File(...), Depends(...)) in
# argument defaults for dependency injection — this is the documented idiom.
ignore = ["B008"]
